# ABY

./: .gitmodules  CMakeLists.txt  README.md
src/abycore/ABY_utils/: ABYconstants.h  asserthandling.h
src/abycore/aby/: abyparty.cpp  abyparty.h  abysetup.cpp  abysetup.h
src/abycore/circuit/: abycircuit.cpp  arithmeticcircuits.cpp  arithmeticcircuits.h  booleancircuits.cpp  booleancircuits.h  circuit.cpp  circuit.h  share.cpp  share.h
src/abycore/sharing/: arithsharing.cpp  boolsharing.cpp  sharing.cpp  yaoclientsharing.cpp  yaoserversharing.cpp
src/examples/: CMakeLists.txt
src/examples/aes/common/: aescircuit.cpp  aescircuit.h
src/examples/aes/test/: aes_gtest.cpp  aes_gtest.h
src/examples/bench_operations/: bench_operations.cpp
src/examples/certification/: CMakeLists.txt  certification_authority_test.cpp  certification_test.cpp
src/examples/certification/common/: certification.cpp  certification.h
src/examples/euclidean_distance/common/: euclidean_dist.h
src/examples/float/: abyfloat.cpp
src/examples/innerproduct/common/: innerproduct.h
src/examples/lowmc/common/: lowmccircuit.cpp  lowmccircuit.h
src/examples/millionaire_prob/common/: millionaire_prob.h
src/examples/min-euclidean-dist/common/: min-euclidean-dist-circuit.cpp  min-euclidean-dist-circuit.h
src/examples/psi_phasing/common/: phasing_circuit.cpp  phasing_circuit.h
src/examples/psi_phasing/common/hashing/: hashing_util.h  simple_hashing.cpp
src/examples/psi_scs/common/: sort_compare_shuffle.cpp  sort_compare_shuffle.h
src/examples/sha1/common/: sha1_circuit.cpp  sha1_circuit.h
src/examples/threshold_euclidean_dist_2d_simd/common/: threshold-euclidean-dist.h
src/examples/uc_circuit/common/: uc_circuit.cpp
src/test/: CMakeLists.txt  README.md  test_parameters.h
src/test/abyparty_test_environment/: aby_test_environment.cpp  aby_test_environment.h  threadpool.h
src/test/operation_tests/: CMakeLists.txt  core_standard_operation_tests.cpp  core_standard_operation_tests.h  core_vector_operation_tests.cpp  core_vector_operation_tests.h  examples_tests.cpp  framework_tests.cpp  operation_tests.cpp  operation_tests.h
